--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.66.1",
     "swiper": "^10.2.0"
   }
