--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "bcryptjs": "^2.4.3",
     "classnames": "^2.3.2",
+    "mongodb": "^6.0.0",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
