--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.3.2",
+    "formik": "^2.4.4",
     "mongodb": "^6.0.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
@@ -20,6 +21,7 @@
     "react-redux": "^8.1.2",
     "react-transition-group": "^4.4.5",
     "sass": "^1.66.1",
-    "swiper": "^10.2.0"
+    "swiper": "^10.2.0",
+    "yup": "^1.2.0"
   }
 }
