--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^8.1.2",
     "react-transition-group": "^4.4.5",
     "sass": "^1.66.1",
